read-job/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-read-api-deployment
  labels:
    app: job-read-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-read-api
  template:
    metadata:
      labels:
        app: job-read-api
    spec:
      containers:
      - name: job-read-api
        image: veljkoskrbic/hirely-read-job-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 5001
